# MWH_V2

./: .gitignore  pyproject.toml
src/: bot.py  config.py  database.py  main.py  messages.py  redis_pool.py  routes.py  system.py
src/core/: config.py  database.py  database_config.py  db.env  dev.env  redis_pool.py
src/database/: database.py  db_models.py  orm.py  orm_requests.py  orm_table_creation.py
src/handlers/: commands.py  keyboards.py  messages.py
src/routes/: tg_routes.py
src/tg_bot/: bot.py
src/tg_bot/handlers/: __init__.py  commands.py  messages.py
