[project]
name = "mwh"
version = "2"
description = "Second version of MWH, using FastAPI, aiogram and orm database"
authors = [
    {name = "Yaroslav",email = "yaroslav2005pana@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "aiogram (>=3.24.0,<4.0.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
